# semantic-retrieval

./: .gitignore  README.md  main.py  pyproject.toml  semantic_retrieval.ipynb  semantic_retrieval_notebook.ipynb  semantic_retrieval_notebook_fixed.ipynb  semantic_retrieval_with_hard_negatives.ipynb  semantic_retrieval_with_hard_negatives2.ipynb
data/processed/: sts_test_clean.csv  sts_train_clean.csv  sts_validation_clean.csv
data/raw/: sts_train_raw.csv
notebooks/: data_overview.ipynb
src/: Word2Vec_Baseline.py  bm25_retrieval.py  data_loader.py  evaluation.py  model.py  preprocess.py  run_word2vec_eval.py  training_data.py
src/bm25/: bm25.py
src/embedding_model/: fine-tune.py  fine_tune_with_hard_negatives.py  hard_negative_dataset.py  mine_hard_negatives.py  zero_shot.py
