[project]
name = "semantic_retrieval"
version = "0.1.0"
description = "A semantic retrieval system using deep learning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.26.0",
    "beir>=2.2.0",
    "bm25s>=0.2.14",
    "datasets>=4.4.1",
    "gensim>=4.4.0",
    "matplotlib>=3.10.7",
    "notebook>=7.5.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pystemmer>=3.0.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
